CrOS: Remove log spam from small icon

(See the bug report for more context)

Bug: 895622
Change-Id: Id7153cfb36ce7fdf23127127679c95074ed3b71c
Reviewed-on: https://chromium-review.googlesource.com/c/1401983
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Manu Cornet <manucornet@chromium.org>
Cr-Commit-Position: refs/heads/master@{#621476}
Former-commit-id: a8a5a253d051d5778ae12c406236c67f87347ec5